--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 <input style="background-color: #ababab; margin-bottom: 50px;" type="number" class="form-control" id="#" placeholder="Digite seu NSA:">
                 <input style="background-color: #ababab; margin-bottom: 50px;" type="email" class="form-control" id="#" placeholder="Digite seu Email:">
                 <input style="background-color: #ababab; margin-bottom: 50px;" type="password" class="form-control" id="#" placeholder="Digite sua senha:">
-                <button style="background-color: #830101; color: white; " type="button" class="form-control">ENTRAR</button>
+                <button style="background-color: #830101;" type="button" class="form-control"><a style="color: white;" href="tela.inicial.html">ENTRAR</a></button>
+                <a href=""></a>
                 
             </div>
                 
